# SlopeDisplace

./: .gitignore  CLAUDE.md  README.md  requirements.txt
cpp/: CMakeLists.txt
cpp/src/: displacement.cpp  displacement.h  main.cpp  pipeline.cpp  pipeline.h  ply_writer.cpp  ply_writer.h  pts_loader.cpp  pts_loader.h  types.h
server/: app.py  inject_synthetic.py  pipeline.py
web/: app.js  index.html
